# SFAT

./: .envrc.template  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: deploy_aws_ecr.yml
docker/: Dockerfile  README.md
sfat/: app.py
sfat/aws/: resource.py
sfat/config/: __init__.py  aws.yml  data_location.yml
sfat/datasets/: __init__.py  company_announcement.py  company_financials.py  config.py  economic_indicator.py  google_news.py  stocklist.py  stockprice.py
sfat/datasets/base/: dynamodb_cached_data.py  dynamodb_json_cached_data.py  s3_cached_data.py  s3_csv_cached_data.py
sfat/db/: __init__.py  db.py  dynamodb.py
sfat/pages/: __init__.py  company_announcement.py  company_financial.py  company_list.py  company_profile.py  economic_indicator.py  news.py  stockprice.py
sfat/st_cached_data/: __init__.py  st_cached_data.py
sfat/storage/: base_storage.py  s3.py
sfat/utils/: logger.py  multi_page.py
sfat/widgets/: __init__.py  stock_selection.py
