[tool.poetry]
name = "sfat"
version = "0.1.0"
description = ""
authors = ["pondelion"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^0.86.0"
boto3 = "1.17.49"
fsspec = "^2021.7.0"
s3fs = "0.6.0"
PyYAML = "^5.4.1"
overrides = "^6.1.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
fastprogress = "^1.0.0"
networkx = "^2.6.2"
japanize-matplotlib = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
